# RTechnology

./: .gitignore  CMakeLists.txt
GUI/: CMakeLists.txt  main.cpp
RTechnologyGUI/: CMakeLists.txt  RTechnologyGUI.qrc  RTechnologyGUI.rc  RTechnologyGUI.sln  RTechnologyGUI.ui  RTechnologyGUI.vcxproj  RTechnologyGUI.vcxproj.filters
RTechnologyGUI/GeneratedFiles/: Makefile  RTechnology  moc_scenesettings.cpp  qrc_RTechnologyGUI.cpp  ui_RTechnologyGUI.h  ui_colorattribute.h  ui_defaultattribute.h  ui_mainwindow.h  ui_scenesettings.h
RTechnologyGUI/RTechnology/: Global.hpp  MyGLWidget.cpp  MyGLWidget.hpp  QOpenGLPictureDraw.cpp  QOpenGLPictureDraw.hpp  RTechnology.pro  Test.cpp  Test.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scenesettings.cpp  scenesettings.h  scenesettings.ui
RTechnologyGUI/RTechnology/AttributesUi/: Attribute.cpp  Attribute.hpp  ColorAttribute.cpp  ColorAttribute.hpp  DefaultAttribute.cpp  DefaultAttribute.hpp  colorattribute.ui  defaultattribute.ui
RTechnologyGUI/RTechnology/Light/: Light.cpp  Light.hpp  PointLight.cpp  PointLight.hpp
RTechnologyGUI/RTechnology/Object/: Cylinder.cpp  Cylinder.hpp  Object.cpp  Object.hpp  Sphere.cpp  Sphere.hpp
RTechnologyGUI/Sources/: RTechnologyGUI.cpp  RTechnologyGUI.h  main.cpp
Raytracer/: CMakeLists.txt  entry_point.cpp
Raytracer/Raytracer/: APictureDraw.cpp  APictureDraw.hpp  AttributeFactory.cpp  AttributeFactory.hpp  Color.cpp  Color.hpp  EnumClassHash.hh  IAttribute.hpp  Light.cpp  Light.hpp  Object.cpp  Object.hpp  ObjectFactory.cpp  ObjectFactory.hpp  Raytracer.cpp  Raytracer.h  Raytracer.hpp  SceneManager.cpp  SceneManager.hpp  SceneSettings.cpp  SceneSettings.hpp  config.h
Raytracer/Raytracer/ModelParcer/: A3DModel.hpp  ModelParcer.cpp  ModelParcer.hpp  ObjModel.cpp  ObjModel.hpp
Raytracer/Raytracer/Objects/: Cone.cpp  Cone.hpp  Cylinder.cpp  Cylinder.hpp  Model.cpp  Model.hpp  Objects.hpp  Parallelepiped.cpp  Parallelepiped.hpp  Plan.cpp  Plan.hpp  SemiConeBot.cpp  SemiConeBot.hpp  SemiConeTop.cpp  SemiConeTop.hpp  Sphere.cpp  Sphere.hpp
Raytracer/Raytracer/attributes/: Attributes.hpp
Raytracer/Raytracer/error/: ParserException.hpp
Raytracer/Raytracer/math/: AVector.cpp  AVector.hpp  DetecteObject.cpp  DetecteObject.hpp  Ray.cpp  Ray.hpp  Vector2.cpp  Vector2.hpp  Vector2_test.cpp  Vector2_test.hpp  Vector3.cpp  Vector3.hpp
Raytracer/Raytracer/objects/: Cone.cpp  Cone.hpp  Cylinder.cpp  Cylinder.hpp  Objects.hpp  Parallelepiped.cpp  Parallelepiped.hpp  Plan.cpp  Plan.hpp  SemiConeBot.cpp  SemiConeBot.hpp  SemiConeTop.cpp  SemiConeTop.hpp  Sphere.cpp  Sphere.hpp
Raytracer/Standalone/: CMakeLists.txt
Raytracer/Standalone/scenes/: scene.json
Raytracer/Standalone/src/: SFMLPictureDraw.cpp  SFMLPictureDraw.hpp  main.cpp
Raytracer/include/Raytracer/: Raytracer.h
